03.business-os/AICompanyManager/900.meta/connect_role_settings_db_20260501_051209/100_patch.out
file:///data/data/com.termux/files/home/03.civilization-development/03.business-os/AICompanyManager/900.meta/connect_role_settings_db_20260501_051209/100_connect_role_settings_db.mjs:471
console.log(`syncRouteCount=${(server.match(/\\/api\\/aicm\\/v2\\/placement\\/sync-role-settings/g) || []).length}`);
                                            ^

SyntaxError: Invalid regular expression flags
    at compileSourceTextModule (node:internal/modules/esm/utils:318:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:99:18)
    at #translate (node:internal/modules/esm/loader:473:20)
    at afterLoad (node:internal/modules/esm/loader:529:29)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:534:12)
    at #getOrCreateModuleJobAfterResolve (node:internal/modules/esm/loader:577:36)
    at afterResolve (node:internal/modules/esm/loader:625:52)
    at ModuleLoader.getOrCreateModuleJob (node:internal/modules/esm/loader:631:12)
    at onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:650:32)
    at TracingChannel.tracePromise (node:diagnostics_channel:350:14)

Node.js v24.14.1
